Add OS Maps to traccar

--- a/web/l10n/en.json
+++ b/web/l10n/en.json
@@ -246,6 +246,10 @@
     "mapTitle": "Map",
     "mapLayer": "Map Layer",
     "mapCustom": "Custom (XYZ)",
+	"mapOsKey": "UK OS Maps Key",
+    "mapOsleisure": "UK OS Map Leisure",
+    "mapOsoutdoor": "UK OS Map Outdoor",
+    "mapOsroad": "UK OS Map Roads",
     "mapCustomArcgis": "Custom (ArcGIS)",
     "mapCustomLabel": "Custom map",
     "mapCarto": "Carto Basemaps",
