remove broken oordinate on click listener

--- a/web/l10n/en.json
+++ b/web/l10n/en.json
@@ -34,8 +34,8 @@
     "sharedNotification": "Notification",
     "sharedAttributes": "Attributes",
     "sharedAttribute": "Attribute",
-    "sharedDrivers": "Drivers",
-    "sharedDriver": "Driver",
+    "sharedDrivers": "Scouts",
+    "sharedDriver": "Scout",
     "sharedArea": "Area",
     "sharedSound": "Notification Sound",
     "sharedType": "Type",
