--- a/web/l10n/en.json
+++ b/web/l10n/en.json
@@ -462,6 +462,42 @@
     "categoryTruck": "Truck",
     "categoryVan": "Van",
     "categoryScooter": "Scooter",
+    "categoryA": "A",
+    "categoryB": "B",
+    "categoryC": "C",
+    "categoryD": "D",
+    "categoryE": "E",
+    "categoryF": "F",
+    "categoryG": "G",
+    "categoryH": "H",
+    "categoryI": "I",
+    "categoryJ": "J",
+    "categoryK": "K",
+    "categoryL": "L",
+    "categoryM": "M",
+    "categoryN": "N",
+    "categoryO": "O",
+    "categoryP": "P",
+    "categoryQ": "Q",
+    "categoryR": "R",
+    "categoryS": "S",
+    "categoryT": "T",
+    "categoryU": "U",
+    "categoryV": "V",
+    "categoryW": "W",
+    "categoryX": "X",
+    "categoryY": "Y",
+    "categoryZ": "Z",
+    "category0": "0",
+    "category1": "1",
+    "category2": "2",
+    "category3": "3",
+    "category4": "4",
+    "category5": "5",
+    "category6": "6",
+    "category7": "7",
+    "category8": "8",
+    "category9": "9",
     "maintenanceStart": "Start",
     "maintenancePeriod": "Period"
 }
